Big cleanup, no more redis, time to move on now.